@@ -1,3 +1,7 @@
+Thu Nov 15 15:13:00 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/ds/Vertex.java: New isManifold() method.
+
 Thu Nov 15 12:58:24 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/ds/Vertex.java (discreteProject): Remove
